--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-	<h1>Hello Coursera! It's a great Course!</h1>
+	<h1>Hello Coursera! dfsdfIt'fasfasdasdass a great Course!</h1>
+	yo this is new
+    
+//]]></script>
 </body>
 </html>
